# haskell-in-haskell

./: .clang-format  .gitignore  LICENSE  Main.hs  README.md  a.out  haskell-in-haskell.cabal  integration_tests.py  runtime.c
examples/: all.hs  memoized-fibonacci.hs
integration_tests/: 0001.hs  0002.hs  0003.hs  0004.hs  0005.hs  0006.hs  0007.hs  0008.hs  0009.hs  0010.hs  0011.hs  0012.hs  0013.hs  0014.hs  0015.hs  0016.hs  0017.hs  0018.hs  0019.hs  0020.hs  0021.hs  0022.hs  0023.hs  0024.hs  0025.hs  0026.hs
src/: CWriter.hs  Cmm.hs  Example.hs  Lexer.hs  Ourlude.hs  Parser.hs  STG.hs  Simplifier.hs  Typer.hs  Types.hs
test/: LexerTest.hs  ParserTest.hs  STGTest.hs  SimplifierTest.hs  Suite.hs  TyperTest.hs
