cabal-version:       >=1.10

name:                haskell-in-haskell
version:             0.1.0.0
license-file:        LICENSE
author:              Lucas Meier
maintainer:          cronokirby@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable haskell-in-haskell
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
