cabal-version:       >=1.10

name:                haskell-in-haskell
version:             0.1.0.0
license-file:        LICENSE
author:              Lucas Meier
maintainer:          cronokirby@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable haskell-in-haskell
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , haskell-in-haskell
  default-language:    Haskell2010

library
  build-depends:       base >=4.13 && <5
                     , containers >=0.6 && <0.7
                     , mtl >=2.2 && <2.3
  default-language:    Haskell2010
  exposed-modules:     Example
  ghc-options:         -Wall
  hs-source-dirs:      src
